✨ Add hover CTA hint on summary cards
- Added 'Click to view →' hint on each summary card
- Hint appears with slide-in animation on hover
- Cyan accent color for better visibility
- Uppercase styling with letter spacing

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                     <span class="card-label">Total Tasks</span>
                 </div>
                 <div class="card-bar"></div>
+                <span class="card-click-hint">Click to view →</span>
             </div>
             <div class="summary-card done clickable-card" onclick="openTasksModal('done')">
                 <div class="card-icon">✅</div>
@@ -114,6 +115,7 @@
                     <span class="card-percent" id="donePercent">0%</span>
                 </div>
                 <div class="card-bar"></div>
+                <span class="card-click-hint">Click to view →</span>
             </div>
             <div class="summary-card progress clickable-card" onclick="openTasksModal('inProgress')">
                 <div class="card-icon">🔄</div>
@@ -123,6 +125,7 @@
                     <span class="card-percent" id="inProgressPercent">0%</span>
                 </div>
                 <div class="card-bar"></div>
+                <span class="card-click-hint">Click to view →</span>
             </div>
             <div class="summary-card uat clickable-card" onclick="openTasksModal('uat')">
                 <div class="card-icon">🧪</div>
@@ -132,6 +135,7 @@
                     <span class="card-percent" id="uatPercent">0%</span>
                 </div>
                 <div class="card-bar"></div>
+                <span class="card-click-hint">Click to view →</span>
             </div>
             <div class="summary-card todo clickable-card" onclick="openTasksModal('toDo')">
                 <div class="card-icon">📝</div>
@@ -141,6 +145,7 @@
                     <span class="card-percent" id="todoPercent">0%</span>
                 </div>
                 <div class="card-bar"></div>
+                <span class="card-click-hint">Click to view →</span>
             </div>
         </div>
 
